# zkcg-verifier

./: CONTRIBUTING.md  CORE_FREEZE.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md  SPEC.md  TODO_PHASE6.md
.github/: FUNDING.yml
api/: Cargo.toml  Dockerfile
api/src/: handler.rs  lib.rs  main.rs  models.rs  rate_limit.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  state.rs  types.rs
verifier/: Cargo.toml
verifier/benches/: halo2_verify.rs  zkvm_verify.rs
verifier/examples/: de_fi_lending_sim.rs  de_fi_lending_sim_parallel.rs  defi_lenfin_sim.md  zkvm_attests_halo.md  zkvm_attests_halo2.rs  zkvm_lending_sim.rs
verifier/src/: backend.rs  backend_halo2.rs  backend_stub.rs  backend_zkvm.rs  engine.rs  lib.rs  policy.rs  proof.rs  storage.rs  tests.rs  tests_equivalence.rs  tests_halo2.rs  tests_zkvm.rs
