[package]
name = "zkcg-common"
version = "0.1.0"
edition = "2024"
description = "Shared types, errors, and utilities for the ZKCG protocol"
license = "Apache-2.0"
repository = "https://github.com/MRSKYWAY/zkcg-verifier"
keywords = ["zk", "zero-knowledge", "protocol", "cryptography"]
categories = ["cryptography", "data-structures"]
readme = "README.md"
publish = true

[features]
default = ["std"]
std = ["thiserror"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0", optional = true }