[package]
name = "zkcg-verifier"
version = "0.1.0"
edition = "2024"
description = "Public verifier and node for ZKCG – trustless off-chain computation verification"
license = "Apache-2.0"
repository = "https://github.com/MRSKYWAY/zkcg-verifier"
keywords = ["zk", "zero-knowledge", "verifier", "halo2", "risc0"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
readme = "README.md"
publish = true

[dependencies]
zkcg-common = { path = "../common" }
# Optional ZK dependencies
halo2_proofs = {version = "0.3.2", optional = true}
ff = { version = "0.13", optional = true }
circuits = {version = "0.1.0", path = "../circuits", optional = true }
zkcg-zkvm-host = { path = "../zkvm/host", optional = true, features = ["zk-vm"] }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }
risc0-zkp = "3"
risc0-core = "3"
halo2curves = { version = "0.6", optional = true }
risc0-zkvm = { version = "3", default-features = false }
sha2 = "0.10"
rand = "0.8"


[dev-dependencies]
rand = "0.8"
halo2curves = "0.6"

[features]
default = []
zk-halo2 = [
    "halo2_proofs",
    "ff",
    "circuits",
    "halo2curves",
]
zk-vm = [
  "serde",
  "bincode",
  "zkcg-zkvm-host",
  "circuits"
  ]
